// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module Module component 1`] = `
<div
  className="component obojobo-draft--modules--module"
  data-focussed={false}
  data-id="6a9d7b0d-4358-4489-9cf6-afcb6ce5391c"
  data-obo-component={true}
  data-type="ObojoboDraft.Modules.Module"
  id="obo-6a9d7b0d-4358-4489-9cf6-afcb6ce5391c"
>
  <div />
</div>
`;

exports[`Module Module component with child 1`] = `
<div
  className="component obojobo-draft--modules--module"
  data-focussed={false}
  data-id="6a9d7b0d-4358-4489-9cf6-afcb6ce5391c"
  data-obo-component={true}
  data-type="ObojoboDraft.Modules.Module"
  id="obo-6a9d7b0d-4358-4489-9cf6-afcb6ce5391c"
>
  <div>
    <MockComponent
      model={
        Object {
          "getComponentClass": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "isThrow": false,
                "value": "MockComponent",
              },
            ],
          },
        }
      }
      moduleData={
        Object {
          "focusState": Object {},
          "navState": Object {},
        }
      }
    />
  </div>
</div>
`;
